# llm-agents

./: .gitignore  README.md  pyproject.toml
llm_agents/: __init__.py  config.py
llm_agents/dags/: __init__.py  _base.py  helloworld_dag.py
llm_agents/dags/deploy/helloworld_slacktest_local/: helloworld_slacktest_local.py  run.sh
llm_agents/interfaces/api_gateway/lambda/: lambda_handler.py
llm_agents/interfaces/bots/: _base.py  slack.py
llm_agents/interfaces/databases/: __init__.py  snowflake_client.py
llm_agents/interfaces/llms/: __init__.py  _base.py  anthropic.py
llm_agents/utils/: __init__.py  strings.py
